@@ -1,6 +1,6 @@
 // Queue implementation -*- C++ -*-
 
-// Copyright (C) 2001, 2002, 2003, 2004, 2005
+// Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006
 // Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
@@ -73,11 +73,11 @@ _GLIBCXX_BEGIN_NAMESPACE(std)
 
   template<typename _Tp, typename _Seq>
     inline bool
-    operator==(const queue<_Tp,_Seq>&, const queue<_Tp,_Seq>&);
+    operator==(const queue<_Tp, _Seq>&, const queue<_Tp, _Seq>&);
 
   template<typename _Tp, typename _Seq>
     inline bool
-    operator<(const queue<_Tp,_Seq>&, const queue<_Tp,_Seq>&);
+    operator<(const queue<_Tp, _Seq>&, const queue<_Tp, _Seq>&);
 
   /**
    *  @brief  A standard container giving FIFO behavior.
@@ -246,10 +246,9 @@ _GLIBCXX_BEGIN_NAMESPACE(std)
    *  linear in the size of the sequences, and queues are considered equivalent
    *  if their sequences compare equal.
   */
-  template<typename _Tp, typename _Sequence>
+  template<typename _Tp, typename _Seq>
     inline bool
-    operator==(const queue<_Tp,_Sequence>& __x,
-	       const queue<_Tp,_Sequence>& __y)
+    operator==(const queue<_Tp, _Seq>& __x, const queue<_Tp, _Seq>& __y)
     { return __x.c == __y.c; }
 
   /**
@@ -265,36 +264,33 @@ _GLIBCXX_BEGIN_NAMESPACE(std)
    *  std::lexicographical_compare() is usually used to make the
    *  determination.
   */
-  template<typename _Tp, typename _Sequence>
+  template<typename _Tp, typename _Seq>
     inline bool
-    operator<(const queue<_Tp,_Sequence>& __x, const queue<_Tp,_Sequence>& __y)
+    operator<(const queue<_Tp, _Seq>& __x, const queue<_Tp, _Seq>& __y)
     { return __x.c < __y.c; }
 
   /// Based on operator==
-  template<typename _Tp, typename _Sequence>
+  template<typename _Tp, typename _Seq>
     inline bool
-    operator!=(const queue<_Tp,_Sequence>& __x,
-	       const queue<_Tp,_Sequence>& __y)
+    operator!=(const queue<_Tp, _Seq>& __x, const queue<_Tp, _Seq>& __y)
     { return !(__x == __y); }
 
   /// Based on operator<
-  template<typename _Tp, typename _Sequence>
+  template<typename _Tp, typename _Seq>
     inline bool
-    operator>(const queue<_Tp,_Sequence>& __x, const queue<_Tp,_Sequence>& __y)
+    operator>(const queue<_Tp, _Seq>& __x, const queue<_Tp, _Seq>& __y)
     { return __y < __x; }
 
   /// Based on operator<
-  template<typename _Tp, typename _Sequence>
+  template<typename _Tp, typename _Seq>
     inline bool
-    operator<=(const queue<_Tp,_Sequence>& __x,
-	       const queue<_Tp,_Sequence>& __y)
+    operator<=(const queue<_Tp, _Seq>& __x, const queue<_Tp, _Seq>& __y)
     { return !(__y < __x); }
 
   /// Based on operator<
-  template<typename _Tp, typename _Sequence>
+  template<typename _Tp, typename _Seq>
     inline bool
-    operator>=(const queue<_Tp,_Sequence>& __x,
-	       const queue<_Tp,_Sequence>& __y)
+    operator>=(const queue<_Tp, _Seq>& __x, const queue<_Tp, _Seq>& __y)
     { return !(__x < __y); }
 
   /**
@@ -343,7 +339,8 @@ _GLIBCXX_BEGIN_NAMESPACE(std)
       __glibcxx_class_requires(_Sequence, _SequenceConcept)
       __glibcxx_class_requires(_Sequence, _RandomAccessContainerConcept)
       __glibcxx_class_requires2(_Tp, _Sequence_value_type, _SameTypeConcept)
-      __glibcxx_class_requires4(_Compare, bool, _Tp,_Tp,_BinaryFunctionConcept)
+      __glibcxx_class_requires4(_Compare, bool, _Tp, _Tp,
+				_BinaryFunctionConcept)
 
     public:
       typedef typename _Sequence::value_type                value_type;
@@ -397,11 +394,13 @@ _GLIBCXX_BEGIN_NAMESPACE(std)
        *  Returns true if the %queue is empty.
        */
       bool
-      empty() const { return c.empty(); }
+      empty() const
+      { return c.empty(); }
 
       /**  Returns the number of elements in the %queue.  */
       size_type
-      size() const { return c.size(); }
+      size() const
+      { return c.size(); }
 
       /**
        *  Returns a read-only (constant) reference to the data at the first
