@@ -1,3 +1,8 @@
+2006-08-03  Paolo Carlini  <pcarlini@suse.de>
+
+	* include/bits/stl_queue.h: Trivial formatting fixes.
+	* include/bits/stl_stack.h: Likewise.
+
 2006-08-01  Ed Smith-Rowland  <3dw4rd@verizon.net>
 
 	* docs/html/ext/tr1.html: Update.
